--- a/.travis.yml
+++ b/.travis.yml
@@ -136,3 +136,17 @@ script:
       ;;
   esac
   set +ex
+
+after_success:
+- | # Add binary to GitHub release.
+  if test "$TRAVIS_TAG"
+  then
+    stack install github-release
+    stack exec -- github-release upload \
+      --token "$GITHUB_TOKEN" \
+      --owner rob-b \
+      --repo num2Word \
+      --tag "$TRAVIS_TAG" \
+      --file "$(stack path --local-install-root)/bin/num2word" \
+      --name "num2word-$TRAVIS_TAG-$TRAVIS_OS_NAME"
+  fi
