--- a/.travis.yml
+++ b/.travis.yml
@@ -141,6 +141,7 @@ after_success:
 - | # Add binary to GitHub release.
   if test "$TRAVIS_TAG"
   then
+    export STACK_YAML=release.stack.yaml
     stack install github-release
     stack exec -- github-release upload \
       --token "$GITHUB_TOKEN" \
@@ -149,4 +150,5 @@ after_success:
       --tag "$TRAVIS_TAG" \
       --file "$(stack path --local-install-root)/bin/num2word" \
       --name "num2word-$TRAVIS_TAG-$TRAVIS_OS_NAME"
+    unset STACK_YAML
   fi
