Change upload management

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ cache:
   - $HOME/.ghc
   - $HOME/.cabal
   - $HOME/.stack
+  - $HOME/.local/bin
   - $TRAVIS_BUILD_DIR/.stack-work
 
 # The different configurations we want to test. We have BUILD=cabal which uses
@@ -138,23 +139,5 @@ script:
   set +ex
 
 after_success:
-- | # Add binary to GitHub release.
-  if test "$TRAVIS_TAG"
-  then
-    export STACK_YAML=release.stack.yaml
-    stack install github-release
-    stack exec -- github-release release \
-      --token "$GITHUB_TOKEN" \
-      --owner rob-b \
-      --repo num2Word \
-      --tag "$TRAVIS_TAG" \
-      --title "num2word-$TRAVIS_TAG-$TRAVIS_OS_NAME"
-    stack exec -- github-release upload \
-      --token "$GITHUB_TOKEN" \
-      --owner rob-b \
-      --repo num2Word \
-      --tag "$TRAVIS_TAG" \
-      --file "$(stack path --local-install-root)/bin/num2word" \
-      --name "num2word-$TRAVIS_TAG-$TRAVIS_OS_NAME"
-    unset STACK_YAML
-  fi
+  - sh tools/install-ghr.sh
+  - sh tools/attach.sh
